# Connect-Four

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Judge.cpp  MonteCarloTreeSearch.h  README.md  Strategy.cpp  Strategy.h  main.cpp
DerivedData/Strategy/: info.plist  scm.plist
DerivedData/Strategy/Index/Debug/macosx10.8-x86_64/Strategy.xcindex/: db.xcindexdb  db.xcindexdb-shm  db.xcindexdb.strings-dir  db.xcindexdb.strings-file  db.xcindexdb.strings-res  db.xcindexdb.strings-sym
DerivedData/Strategy/Index/Release/macosx10.8-i386/Strategy.xcindex/: db.xcindexdb  db.xcindexdb-shm  db.xcindexdb.strings-dir  db.xcindexdb.strings-file  db.xcindexdb.strings-res  db.xcindexdb.strings-sym
DerivedData/Strategy/Index/Release/macosx10.8-x86_64/Strategy.xcindex/: db.xcindexdb  db.xcindexdb.strings-dir  db.xcindexdb.strings-file  db.xcindexdb.strings-res  db.xcindexdb.strings-sym
DerivedData/Strategy/Logs/Issues/: 1ABC56D2-2EDA-4BC5-B480-45434FC77F4B.xcactivitylog  205ADFCB-7840-4343-9723-ECC225CEC113.xcactivitylog  Cache.db
DerivedData/Strategy/TextIndex/: text-index.idx
Strategy.xcodeproj/: project.pbxproj
Strategy.xcodeproj/project.xcworkspace/xcuserdata/cqb.xcuserdatad/: UserInterfaceState.xcuserstate
Strategy.xcodeproj/project.xcworkspace/xcuserdata/evison.xcuserdatad/: UserInterfaceState.xcuserstate
Strategy.xcodeproj/xcuserdata/cqb.xcuserdatad/xcschemes/: Strategy.xcscheme  xcschememanagement.plist
Strategy.xcodeproj/xcuserdata/evison.xcuserdatad/xcschemes/: Strategy.xcscheme
